--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
         <div id="aboutart"> 
             <article>
-                <div><i class="fas fa-camera-retro"></i></div>
+                <span><i class="fas fa-camera-retro"></i></span>
                 <h3>Lorem, ipsum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dignissimos consectetur iusto illo nostrum repellat!</p>
                 <button>Learn more</button>
             </article>
             <article>
-                <div><i class="fas fa-camera-retro"></i></div>
+                <span><i class="fas fa-tachometer-alt"></i></span>
                 <h3>Lorem, ipsum.</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor non nemo, voluptate labore veritatis nisi!</p>
                 <button>Learn more</button>
             </article>
             <article>
-                <div><i class="fas fa-camera-retro"></i></div>
-                <h3>Lorem, ipsum.</h3>
+                <span><i class="fas fa-briefcase"></i></span>
+                <h3>Lorem, ipsum.</h3>  
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias debitis doloribus beatae architecto dolore iure.</p>
                 <button>Learn more</button>
             </article>
@@ -64,6 +64,23 @@
             <h2>Our latest works</h2>
             <hr />
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
+            <div id="buttons3">
+                <button class="active">Photography</button>
+                <button>Design</button>
+                <button>Print</button>
+            </div>
+            <div>
+                <img src="/img/img1.jpg" alt="">
+                <img src="/img/img2.jpg" alt="">
+                <img src="/img/img3.jpg" alt="">
+                <img src="/img/img4.jpg" alt="">
+                <img src="/img/img5.jpg" alt="">
+                <img src="/img/img6.jpg" alt="">
+                <img src="/img/img7.jpg" alt="">
+                <img src="/img/img8.jpg" alt="">
+                <img src="/img/img9.jpg" alt="">
+                <img src="/img/img10.jpg" alt="">
+            </div>
         </section>
         <section class="bgag">
             <h2>Testimonials</h2>
