--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <button>Design</button>
                 <button>Print</button>
             </div>
-            <div>
+            <div id="imgs">
                 <img src="/img/img1.jpg" alt="">
                 <img src="/img/img2.jpg" alt="">
                 <img src="/img/img3.jpg" alt="">
