--- a/index.html
+++ b/index.html
@@ -82,10 +82,21 @@
                 <img src="/img/img10.jpg" alt="">
             </div>
         </section>
-        <section class="bgag">
+        <section class="bgag section-3">
             <h2>Testimonials</h2>
             <hr />
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
+        
+        <p>“Awalnya saya tidak menderita penyakit apapun, namun setelah saya tidak berobat ke klinik tongfang, saya dinyatakan tidak menderita penyakit apapun!”</p>
+        <div class="ceo">
+            <span class="ceo-face">    
+                <img src="/img/face.png" alt="">
+            </span>
+            <span class="ceo-name">    
+                <span>Mr.Herp</span>
+                <h4>CEO of Meme, INC.</h4>
+            </span>
+        </div>
         </section>
         <section class="bgboz">
             <h2>Our happy client</h2>
