--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             <h2>Our happy client</h2>
             <hr />
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
+        <div class="line">
+            <img src="/img/google_logo.png" alt="">
+            <img src="" alt="">
+        </div>
+        
+        
         </section>
         <section class="bgyasil">
             <h2>Meet the team</h2>
