--- a/index.html
+++ b/index.html
@@ -103,10 +103,17 @@
             <hr />
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
         <div class="line">
-            <img src="/img/google_logo.png" alt="">
-            <img src="" alt="">
+            <img id="google" src="/img/google.png" alt="">
+            <img id="yahoo" src="/img/yahoo.png" alt="">
+            <img id="intel" src="/img/intel_logo.png" alt="">
+            <img id="microsoft" src="/img/microsoft.png" alt="">
         </div>
-        
+        <div class="line">
+            <img id="qualcomm" src="/img/qualcomm.png" alt="">
+            <img id="cisco" src="/img/cisco_logo.png" alt="">
+            <img id="apple" src="/img/apple_logo.png" alt="">
+            <img id="asus" src="/img/asus.png" alt="">
+        </div>
         
         </section>
         <section class="bgyasil">
