--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="line">
             <img id="google" src="/img/google.png" alt="">
             <img id="yahoo" src="/img/yahoo.png" alt="">
-            <img id="intel" src="/img/intel_logo.png" alt="">
+            <img id="intel" src="/img/intel.png" alt="">
             <img id="microsoft" src="/img/microsoft.png" alt="">
         </div>
         <div class="line">
@@ -120,6 +120,25 @@
             <h2>Meet the team</h2>
             <hr />
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
+        <div class="team">
+            <div class="member">
+                <div id="krisna"></div>
+            </div>
+            <div class="member">
+                <div id="gabriel"></div>    
+            </div>
+            <div class="member">
+                <div id="adik"></div>    
+            </div>
+            <div class="member">
+                <div id="zlatan"></div>    
+            </div>
+            <div class="member">
+                <div id="zan"></div>
+            </div>
+        </div>
+        
+        
         </section>
     </main>
 </body>
