--- a/index.html
+++ b/index.html
@@ -122,24 +122,44 @@
             <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus earum repellendus architecto!</h6>
         <div class="team">
             <div class="member">
-                <div id="krisna"></div>
+                <div class="person">
+                    <div id="krisna"></div>
+                </div>
                 <hr>
+                <h5>Krisna Wijaya</h5>  
+                 <div class="social">
+                    <i class="fab fa-dribbble-square"></i>
+                    <i class="fab fa-behance-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                 </div>
             </div>
             <div class="member">
-                <div id="gabriel"></div>  
+                <div class="person">
+                    <div id="gabriel"></div> 
+                </div> 
                 <hr>  
+                <h5>Gabriel Yoshua</h5>
             </div>
             <div class="member">
-                <div id="adik"></div>
-                <hr>    
+                <div class="person">
+                    <div id="adik"></div>
+                </div>
+                <hr>   
+                <h5>Adik N.K.L</h5> 
             </div>
             <div class="member">
-                <div id="zlatan"></div>
-                <hr>    
+                <div class="person">
+                    <div id="zlatan"></div>
+                </div>
+                <hr> 
+                <h5>Zan D.J</h5>
             </div>
             <div class="member">
-                <div id="zan"></div>
+                <div class="person">
+                    <div id="zan"></div>
+                </div>
                 <hr>
+                <h5>Zlatan Ibrahimovic</h5>
             </div>
         </div>
         
