--- a/index.html
+++ b/index.html
@@ -264,6 +264,21 @@
                 </div>
             </div>
         </div>
+        <div class="contact">
+            <h3>CONTACT US</h3>
+            <hr>
+            <p>10044 West 23th Street, Suite 721</p>
+            <p>New York NY 10010</p> 
+            <p>Email: Username@email.com</p> 
+            <p>Phone: +1 (0) 123 4567 890</p> 
+            <p>Fax: +1 (0) 321 4567 890</p>
+            <form id="form-contact" action="">
+                <input type="text" placeholder="Your Name.." />
+                <input type="email" placeholder="Your Email.."/>
+                <textarea  placeholder="Your Mesage.." cols="30" rows="10"></textarea>
+                <button type="submit">Send</button>
+            </form> 
+        </div>
     </footer>
 </body>
 
