--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
                     <h3>Lorem, ipsum.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dignissimos consectetur iusto
                         illo nostrum repellat!</p>
-                    <button>Learn more</button>
+                    <button class="about-btn">Learn more</button>
                 </article>
                 <article>
                     <span><i class="fas fa-tachometer-alt"></i></span>
                     <h3>Lorem, ipsum.</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor non nemo, voluptate labore
                         veritatis nisi!</p>
-                    <button>Learn more</button>
+                    <button class="about-btn">Learn more</button>
                 </article>
                 <article>
                     <span><i class="fas fa-briefcase"></i></span>
                     <h3>Lorem, ipsum.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias debitis doloribus beatae
                         architecto dolore iure.</p>
-                    <button>Learn more</button>
+                    <button class="about-btn">Learn more</button>
                 </article>
             </div>
 
