--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </nav>
         <div id="title">
             <h1>Art is eternal happiness</h1>
-            <button>work with us</button>
+            <button id="button1">work with us</button>
         </div>
-        <a id="scroll">Scroll down</a>
+        <a id="scroll">Scroll down 🠗</a>
     </header>
     <main>
         <section class="bgag">
