--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <input type="text" placeholder="Your Name.." />
                         <input type="email" placeholder="Your Email.."/>
                         <textarea  placeholder="Your Mesage.." cols="30" rows="10"></textarea>
-                        <button id="#buttons1" type="submit">Send</button>
+                        <button id="buttons1" type="submit">Send</button>
                 </form> 
             </div>
         </div>
